# koality

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  mkdocs.yml  pyproject.toml  versions.json  zizmor.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: checks.yml  codeql.yml  coverage.yml  lint.yml  release.yml  tests.yml  type.yml
docs/: configuration.md  getting-started.md  identifier_filters.md  identifier_placeholder.md  index.md
docs/checks/: matchrate.md
docs/machinery/: checks.md  cli.md  exceptions.md  executor.md  index.md  models.md  utils.md
src/: __init__.py
src/koality/: __init__.py  checks.py  cli.py  exceptions.py  executor.py  models.py  utils.py
tests/: __init__.py  test_checks.py  test_executor.py  test_utils.py
tests/bquest/: test_column_checks.py  test_match_rate_check.py  test_rel_count_changed_check.py
tests/integration/: __init__.py  conftest.py  test_checks.py  test_column_checks.py  test_executor.py  test_executor_fetch_roll_window.py  test_executor_table_quoting.py  test_integration.py  test_match_rate_check.py  test_rel_count_changed_check.py  test_underscore_aliasing.py
tests/unit/: __init__.py  test_cli.py  test_executor.py  test_filters.py  test_identifier_placeholder_checks.py  test_unit.py  test_utils.py
v0.1.0/: index.html  objects.inv
v0.1.0/configuration/: index.html
v0.1.0/getting-started/: index.html
v0.10.0/identifier_filters/: index.html
v0.11.0/: 404.html
v0.11.0/machinery/: index.html
v0.11.1/: objects.inv
v0.11.1/identifier_placeholder/: index.html
v0.11.2/getting-started/: index.html
v0.12.0/: index.html
v0.12.0/configuration/: index.html
v0.13.0/: 404.html  index.html
v0.13.0/configuration/: index.html
v0.13.2/: 404.html
v0.3.0/: 404.html  objects.inv
v0.4.1/: objects.inv
v0.7.0/: objects.inv
v0.9.0/: 404.html  index.html  objects.inv
(+80 files in other folders)
