[project]
name = "koality"
version = "0.1.0"
description = "Library for data checks and data quality monitoring."
authors = [
    { name = "Norbert Maager" },
    { name = "Team PiT" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.3",
    "google-cloud-bigquery[bqstorage, pandas]>=3.4",
    "google-cloud-storage>=2.6.0",
    "numpy>=1.23.5",
    "pandas>=2.0.3",
    "pandas-gbq>=0.19.2",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.5.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.2",
    "ruff>=0.2.1",
    "types-pyyaml>=6.0.12.11",
    "bquest>=0.4.1",
    "keyrings.google-artifactregistry-auth>=1.1.1",
    "zizmor>=1.2.2",
    "creosote>=4.0.0",
    "pip-audit>=2.7.3",
    "poethepoet>=0.37.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Bandit
    "S",
    # Bugbear
    "B",
    # Builtins
    "A",
    # comprehensions
    "C4",
    # eradicate
    "ERA",
    # flake8-2020
    "YTT",
    # isort
    "I",
    # print
    "T20",
    # Pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # return
    "RET",
]

[tool.ruff.lint.per-file-ignores]
"src/koality/checks.py" = ["S608"]

[tool.poe.tasks]
# Linting and formatting.
format = [
    { cmd = "ruff format" },
    { cmd = "ruff check --fix" },
]
lint = [
    { cmd = "ruff format --check" },
    { cmd = "ruff check" },
]
# Security and dependency checks.
check_vulnerable_dependencies = "pip-audit"
check_unused_dependencies = "creosote"
check_githubactions = "zizmor .github/workflows/"
# Testing.
test_unit = "pytest -m unit"
test_integration = "pytest -m integration"
test = ["test_unit", "test_integration"]

[project.scripts]
koality = "koality.cli:cli"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.creosote]
paths = ["koality"]
exclude-deps = []
